# ifcexport2

./: .dockerignore  .gitignore  Dockerfile  README-ru.md  README.md  env-docker.yml  env.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml
deploy/: appv2-scaled-job.yaml  appv2-worker.yaml  appv2.yaml  celery-worker.yml  deployment.yaml  pvc-dynamic.yaml  redis-pvc-dynamic.yaml  redis.yml  svc.yaml
ifcexport2/: __init__.py  api.py  celery_config.py  cli.py  compat.py  ifc_elements.py  ifc_hierarchy.py  ifc_preprocess.py  ifc_psets.py  ifc_styles.py  ifc_to_mesh.py  markup.py  mesh.py  mesh_to_three.py  models.py  partition.py  settings.py  start.sh  step_decode.py  tasks.py  utils.py
ifcexport2/api/: __init__.py  app.py  models.py  redis_helpers.py  settings.py  upload.py
ifcexport2/appv2/: _logging.py  app.py  consumer.py  consumer_stats.py  job.py  jobv3.py  task.py
ifcexport2/cxm/: __init__.py  abs_handler.py  cli.py  consts.py  grouping.py  handlers.py  k8s.py  load_scene.py  metric_manager.py  models.py  s3.py  utils.py
ifcexport2/cxm/tools/: props_update.py
