[tool.poetry]
name = "ifcexport2"
version = "0.1.0"
description = ""
authors = ["sth-v <sthv.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ifcopenshell="*"
numpy="*"
ujson="*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
